--- a/index.html
+++ b/index.html
@@ -3,18 +3,123 @@
 <head>
 	<title>MongoChat</title>
 	<link rel="stylesheet" href="https://bootswatch.com/cerulean/bootstrap.min.css">
+	<style>
+
+	.messages{
+		height: 400px;
+	}
+	</style>
 </head>
 <body>
 	<div class="container">
 		<div class="col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3">
-			<h1 class="text-center">MongoChat <button class="btn btn-danger clearbtn">Clear</button></h1>
+			<h1 class="text-center">MongoChat<button class="btn btn-danger clearBtn">Clear</button></h1>
 			<div class="status"></div>
 			<div class="chat">
 				<input type="text" chat="username form-control" placeholder="What's Your Name?">
 				<br>
-				<div class="message well"></div>
+				<div class="messages well"></div>
 				<textarea class="form-control" placeholder="Enter Message ..."></textarea>
+			</div>
 		</div>
 	</div>
+
+	<script src="http://127.0.0.1:3000/socket.io/socket.io.js"></script>
+
+	<script> 
+		(function() {
+			var element = function(selector) { 
+				// create a shortcut function
+				return document.querySelector(selector);
+			}
+
+			// get Elements
+			status = element('.status');
+			messages = element('.messages');
+			textarea = element('.chat textarea');
+			username = element('.username');
+			clearBtn = element('.clearBtn');
+
+			StatusDefault = status.textContent;
+
+			setStatus = function(s){
+				status.textContent = s;
+
+				if(s !== StatusDefault){
+					var delay = setTimeout(function(){
+						setStatus(StatusDefault);
+					}, 3000);
+				}
+			}
+
+			var socket = io.connect('http://127.0.0.1:3000');
+
+			if(socket !== undefined){
+				// output
+				socket.on('output', function(data){
+					if(data.length){
+						for(var x = 0; x < data.length; x = x+1){
+							var message = document.createElement('div');
+							message.setAttribute('class', 'chat-message');
+							message.textContent = data[x].name+': '+data[x].message;
+							messages.appendChild(message);
+							messages.insertBefore(message, messages.firstChild);
+						}
+					}
+				});
+
+				socket.on('status', function(data){
+					setStatus((typeof data === 'object')? data.message: data);
+
+					if(data.clear === true){
+						textarea.value = '';
+					}
+				});
+
+				// keydown Event - send
+				textarea.addEventListener('keydown', function(event){
+					var self = this;
+
+					name = username.value;
+
+					if(event.which === 13 && event.shiftKey == false){
+						socket.emit('input', {
+							name: name,
+							message: self.value
+						});
+
+						event.preventDefault();
+					}
+				});
+
+				// clear button
+				clearBtn.addEventListener('click', function(event){
+					socket.emit('clear');
+				});
+
+				// Clear message
+				socket.on('cleared', function(){
+					messages.textContent = '';
+				});
+			}
+		}) ();
+	</script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
